# API/routes/API-article.js
@@ -62,7 +62,12 @@ router.get("/all", (req, res) => {
     });
 });
 
-
+router.get("/articlesDetails", (req, res) => {
+    let sql = "select * from tb_articles join tb_category ON tb_articles.ID_Category = tb_category.ID_Category join tb_brands ON tb_articles.ID_Brand = tb_brands.ID_Brand join tb_image_article ON tb_articles.ID_Article = tb_image_article.ID_Article";
+    connection.query(sql, function (err, result, fields) {
+        res.send(result);
+    });
+});
 
 router.get("/Category/:name", (req, res) => {
     let sql = "select * from tb_category natural join tb_articles where Category_Name like '" + req.params.name +"'";
